--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="calc-container">
 
         <div class="display-container">
-            <p class="display">123456789</p>
         </div>
 
         <div class="calc-body">
             <div class="delete-buttons">
                 <button id="clear">AC</button>
                 <button id="delete">DEL</button>
+                <button id="equals">=</button>
             </div>
 
             <div class="operation-buttons">
