--- a/index.html
+++ b/index.html
@@ -5,50 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
-
 <body>
-    <div class="calc-container">
-
-        <div class="display-container">
+    <div class="calculator-grid">
+        <div class="output">
+            <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
-
-        <div class="calc-body">
-            <div class="delete-buttons">
-                <button id="clear">AC</button>
-                <button id="delete">DEL</button>
-                <button id="equals">=</button>
-
-            </div>
-
-            <div class="operation-buttons">
-                <button id="add">+</button>
-                <button id="subtract">-</button>
-                <button id="multiply">x</button>
-                <button id="divide">/</button>
-
-            </div>
-
-            <div class="number-buttons">
-
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
-                <button id="four">4</button>
-                <button id="five">5</button>
-                <button id="six">6</button>
-                <button id="one">1</button>
-                <button id="two">2</button>
-                <button id="three">3</button>
-            </div>
-
-
-        </div>
-
+        <button data-all-clear class="span-two">AC</button>
+        <button data-delete>DEL</button>
+        <button data-operation>÷</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>*</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation>+</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation>-</button>
+        <button data-number>.</button>
+        <button data-number>0</button>
+        <button data-equals class="span-two">=</button>
     </div>
-    
-
-    <script src="script.js"></script>
 </body>
 </html>
